src/objects/SHARE__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Company_ID__c</fullName>
        <label>Company ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Code__c</fullName>
        <label>Record Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>SHARE</label>
</CustomObject>